@@ -13,5 +13,6 @@
 		<property name="Show video" nameLabel="video_property_show_video" type="string" />
 		<property name="Narration" nameLabel="video_property_narration" type="narration" isLocalized="true" />
         <property name="Hide default controls" nameLabel="video_property_hide_default_controls" type="boolean" />
+        <property name="Hide subtitles" nameLabel="video_property_hide_subtitles" type="boolean" />
 	</model>
 </addon>
