@@ -920,6 +920,7 @@ var ice_dictionary_fr = {
 "video_property_show_video": "Afficher la vidéo",
 "video_property_narration": "Narration",
 "video_property_hide_default_controls": "Cacher les contrôles par défaut",
+"video_property_hide_subtitles" : "Hide subtitles",
 "WritingCalculations_info": "Permet de créer des activités de maths qui incluent des opérations : multiplication, division, addition et soustraction.",
 "WritingCalculations_name": "Ecrire des calculs",
 "WritingCalculations_property_value": "Valeur",
